adding logging and validation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,26 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.main.allow-circular-references=true
+
+#Logging Configuration
+# Set the logging level to DEBUG for the entire application
+logging.level.org.springframework.web=DEBUG
+logging.level.com.school.controller.CourseController=DEBUG
+
+# Specify the log pattern format
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
+
+# Set the logging level for specific packages
+logging.level.com.school.service=INFO
+
+
+# Specify the log file name
+logging.file.name=logs/myapp.log
+
+# Optional: Set the log file path
+# logging.file.path=logs
+
+# Optional: Set the maximum size of the log file before it is rolled over
+# logging.file.max-size=10MB
+
+
