--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,6 +28,18 @@ logging.level.com.school.service=INFO
 # Specify the log file name
 logging.file.name=logs/myapp.log
 
+
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=tejasshah2k19@gmail.com
+spring.mail.password=oyaggudpfhjgnthb
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
+
+
 # Optional: Set the log file path
 # logging.file.path=logs
 
